--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^1.9.0"
+    "@astrojs/tailwind": "^2.1.3",
+    "astro": "^1.9.0",
+    "astro-icon": "^0.8.0",
+    "tailwindcss": "^3.0.24",
+    "tiny-invariant": "^1.3.1",
+    "vanilla-tilt": "^1.8.0"
   }
 }
